# ChangeLog for sys-kernel/dracut
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.130 2013/09/25 21:31:38 aidecoe Exp $

*dracut-033-r1 (25 Sep 2013)

  25 Sep 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> +dracut-033-r1.ebuild:
  Dropped optimization flag, because it is no longer an option. dracut-install
  binary is installed into libdir, therefore it was required to set target lib
  directory according to multilib rules.

  It fixes bug #485218 and bug #485202.

*dracut-033 (14 Sep 2013)

  14 Sep 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-026-r2.ebuild,
  dracut-027-r3.ebuild, dracut-029.ebuild, dracut-030.ebuild,
  dracut-031.ebuild, dracut-031-r1.ebuild, +dracut-033.ebuild,
  +files/033-0001-dracut-functions.sh-support-for-altern.patch,
  +files/033-0002-gentoo.conf-let-udevdir-be-handled-by-.patch:
  Version bump. Added dash module back and it can be installed optionally. bash
  is a module too, now and can be disable at initramfs build time.

  NEWS
  ~~~~
  dracut-033
  ==========
  - improved hostonly device recognition
  - improved hostonly module recognition
  - add dracut.css for dracut.html
  - do not install udev rules from /etc in generic mode
  - fixed LABEL= parsing for swap devices
  - fixed iBFT network setup
  - url-lib.sh: handle 0-size files with curl
  - dracut.asc: document debugging dracut on shutdown
  - if rd.md=0, use dmraid for imsm and ddf
  - skip empty dracut modules
  - removed caching of kernel cmdline
  - fixed iso-scan, if the loop device driver is a kernel module
  - bcache: support new blkid
  - fixed ifup udev rules
  - ifup with dhcp, if no "ip=" specified for the interface
  
  dracut-032
  ==========
  - add parameter --print-cmdline
      This prints the kernel command line parameters for the current disk
      layout.
      $ dracut --print-cmdline
      rd.luks.uuid=luks-e68c8906-6542-4a26-83c4-91b4dd9f0471