@@ -3,7 +3,7 @@ DEPEND=virtual/udev dracut_modules_systemd? ( >=sys-apps/systemd-199 ) app-text/
 DESCRIPTION=Generic initramfs generation tool
 EAPI=4
 HOMEPAGE=http://dracut.wiki.kernel.org
-IUSE=debug device-mapper optimization net selinux dracut_modules_biosdevname dracut_modules_bootchart dracut_modules_btrfs dracut_modules_caps dracut_modules_crypt-gpg dracut_modules_crypt-loop dracut_modules_dash dracut_modules_gensplash dracut_modules_mdraid dracut_modules_multipath dracut_modules_plymouth dracut_modules_syslog dracut_modules_systemd dracut_modules_crypt dracut_modules_dmraid dracut_modules_dmsquash-live dracut_modules_livenet dracut_modules_lvm dracut_modules_cifs dracut_modules_iscsi dracut_modules_livenet dracut_modules_nbd dracut_modules_nfs dracut_modules_ssh-client
+IUSE=debug device-mapper net selinux dracut_modules_biosdevname dracut_modules_bootchart dracut_modules_btrfs dracut_modules_caps dracut_modules_crypt-gpg dracut_modules_crypt-loop dracut_modules_dash dracut_modules_gensplash dracut_modules_mdraid dracut_modules_multipath dracut_modules_plymouth dracut_modules_syslog dracut_modules_systemd dracut_modules_crypt dracut_modules_dmraid dracut_modules_dmsquash-live dracut_modules_livenet dracut_modules_lvm dracut_modules_cifs dracut_modules_iscsi dracut_modules_livenet dracut_modules_nbd dracut_modules_nfs dracut_modules_ssh-client
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=virtual/udev dracut_modules_systemd? ( >=sys-apps/systemd-199 ) app-arch/cpio >=app-shells/bash-4.0 >=sys-apps/baselayout-1.12.14-r1 >sys-apps/kmod-5[tools] >=sys-apps/sysvinit-2.87-r3 >=sys-apps/util-linux-2.21 virtual/pkgconfig debug? ( dev-util/strace ) device-mapper? ( >=sys-fs/lvm2-2.02.33 ) net? ( net-misc/curl >=net-misc/dhcp-4.2.4_p2-r1[client] sys-apps/iproute2 ) selinux? ( sys-libs/libselinux sys-libs/libsepol ) dracut_modules_biosdevname? ( sys-apps/biosdevname ) dracut_modules_bootchart? ( app-benchmarks/bootchart2 sys-apps/usleep sys-process/acct ) dracut_modules_btrfs? ( sys-fs/btrfs-progs ) dracut_modules_caps? ( sys-libs/libcap ) dracut_modules_cifs? ( net-fs/cifs-utils ) dracut_modules_crypt? ( sys-fs/cryptsetup ) dracut_modules_crypt-gpg? ( app-crypt/gnupg ) dracut_modules_dash? ( >=app-shells/dash-0.5.4.11 ) dracut_modules_dmraid? ( sys-fs/dmraid sys-fs/multipath-tools ) dracut_modules_gensplash? ( media-gfx/splashutils ) dracut_modules_iscsi? ( >=sys-block/open-iscsi-2.0.871.3 ) dracut_modules_lvm? ( >=sys-fs/lvm2-2.02.33 ) dracut_modules_mdraid? ( >=sys-fs/mdadm-3.2.6-r1 ) dracut_modules_multipath? ( sys-fs/multipath-tools ) dracut_modules_nbd? ( sys-block/nbd ) dracut_modules_nfs? ( net-fs/nfs-utils net-nds/rpcbind ) dracut_modules_plymouth? ( >=sys-boot/plymouth-0.8.3-r1 ) dracut_modules_ssh-client? ( dev-libs/openssl ) dracut_modules_syslog? ( || ( app-admin/syslog-ng app-admin/rsyslog ) )
@@ -12,4 +12,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=mirror://kernel/linux/utils/boot/dracut/dracut-033.tar.bz2
 _eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	4878e7f88afc0ba0866ac112190b0fd4	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=755eca03f412dc992b7dcbc6256a875a
+_md5_=35467aeb8aa9562c22a58c5f851311f5
