@@ -10,4 +10,4 @@ RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/sn
 SLOT=0
 SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-31.0.1650.0.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-31.0.1650.0-testdata.tar.xz )
 _eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	2ff578fb151da221e1797f12e2990e72	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	pax-utils	2424f959506320f5196de8f79fa05297	portability	536c5e70c5fb252ed3b769e04aa3f05b	python-any-r1	06dec86544a782db0a4fd8a90092565d	python-utils-r1	3b392f7373bcc74b7c97ae0acd9ec0e6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=1f8702b27848099a00ca7f3e69083f1a
+_md5_=b2a4addb32369deec971295878701ed9
