@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/dracut-033-r1.ebuild,v 1.1 2013/09/25 21:31:38 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/dracut-033-r1.ebuild,v 1.2 2013/09/28 17:17:51 aidecoe Exp $
 
 EAPI=4
 
@@ -62,7 +62,7 @@ NETWORK_MODULES="
 add_req_use_for device-mapper ${DM_MODULES}
 add_req_use_for net ${NETWORK_MODULES}
 IUSE_DRACUT_MODULES="${COMMON_MODULES} ${DM_MODULES} ${NETWORK_MODULES}"
-IUSE="debug device-mapper optimization net selinux ${IUSE_DRACUT_MODULES}"
+IUSE="debug device-mapper net selinux ${IUSE_DRACUT_MODULES}"
 
 RESTRICT="test"
 
