@@ -29,15 +29,15 @@ EBUILD chromium-29.0.1547.65.ebuild 16988 SHA256 2ee70bc91ba3e139ac427dad623fcf9
 EBUILD chromium-30.0.1599.37.ebuild 17494 SHA256 2e62ce6bdad07bb29110f769915880879d9de57353e437c836d8feb122b453e3 SHA512 e71597045d41885ed688c7441019a35cb7dd8eb7f5d8269f2c49d9c7737fa6b2ad80afb2de4643ab598c5a76e61be6814e9fdf727a3ea41e2a3971848bfe0ecd WHIRLPOOL 03e687d68ef738dbd3a34efc70646feeeecfa6a95e56079bb17408a88e91b6ba2f563f1a286adc0f2df66aaf453d22c17044612cf7adbb9ed8502d78198b07ed
 EBUILD chromium-30.0.1599.47.ebuild 17494 SHA256 93fa5afc1d7dbc269c61b710d4166437cac78a719475752d0638596a0c9e57de SHA512 849fbe1d9c5737c5c48c31538b5840ab743ddb91f52c4947bbac21a7882489bfd027820106f0ce2b8bdaf75f5fab06640a77383bb87c906a0d1e7e5c5bea0656 WHIRLPOOL 8a5775721a5a451bf2f79ce42b9aab1106c72ef7c97f48b8eb314ef496a03bc4a8384bdf3a3616f332a043623c432cb5789607b6678163957a1ede4003eff0e4
 EBUILD chromium-31.0.1626.0.ebuild 16828 SHA256 d3b00970356ff4e8159b7d971bcb9b059f61b1a6747ea87555cab7471127aacc SHA512 2e92127066f835622003f127fa89cda3a9790f97dd9e894bec62c36cfcc7ea21cac96917a78cecb5f50bf7a96e92b031a4415bc2da610f391c98b40a9bcfdc5e WHIRLPOOL a8f87fbddc81cf89719ad2625eff12297677d9fc8549a319fba2ce291579804530cc7d6bc47ced07c4eeda4d1d341d42bb9bb958158e8c9dd93d0ccac53e5889
-EBUILD chromium-31.0.1650.0.ebuild 17079 SHA256 a37d44b449659b57ddcfb742b8bffe3042f69407a3c83f21f0674d4dfd78f9b0 SHA512 6d6151a44f6216b4d8c92abe374f7edea23956f09458a581fe232c27819861d47f35281dac097b0860c82762b4b9c3a9993484c2e1fb563d57af7a0ce218b18d WHIRLPOOL 00c49a4d568ec2fc20073481026e95acbda4bc71606c2605dc27e2c54b58e716de2e3567629a9c40e572d478245eccbf162e00fdadb958ade6df6acca9895632
+EBUILD chromium-31.0.1650.0.ebuild 17028 SHA256 e2cc255b63fdf28b4a2feceb3843a5e244db998bbe74b02cfc81a25d574e548f SHA512 7b7d1a4588f6d3d40a7d56b4f6df7c5e71d8e4dcaa98bf929f5e9dc613aa85b90e07264a3d8b1ae27e8a9b1135a7b5f8fb440e3b82e7049da37e78a23be5830e WHIRLPOOL ca94db75ebaefb3cb0d62d20235c535b2f7a97b09d41f8767a2087be84611126d6e3a9a2a4bdbf7c066792b547c46731e4983a204d6db4c7dceecf38efe39556
 EBUILD chromium-9999-r1.ebuild 18901 SHA256 df7870e91ca9eeeac6712346823bdbd748838a94d215571e5cad9ff3fa01bf42 SHA512 755f65abaa9c83ab057dcae47e2b782ae1a2b25d4fa3d567450ddda765d555c9296bfd5610fcdbe002c61bfddb6dc30fc01cfff5a54130421d969e8952abf9ec WHIRLPOOL c4e92c6826807d7a1322b9504b52167b7d164c00a526febd7bf081c9247ed06363eec35c1b2d6dd1a8e106ad0224ff8451799b654e26e5adfc6a431254f43c32
-MISC ChangeLog 83545 SHA256 62f398d0b8e993b1858e766d8b8188db70586dd7068bd5e58bdb5fd0ee5275a8 SHA512 0c9a77a432e90fb45b92273515e65cf7e25e89c876652716bc8e44020b0b6c396a3058ec985ee017aa5d50f73479e4a83a2e3f416a1fa06298d6130511ce903b WHIRLPOOL b72096cdda1a05bcb586c728babfc2e95ba9e2800838c77a9b50147706e7a92fab24e42b047b2c76a30688664e52f7f6049ec9a484ee00a8994bb94b73e97c83
+MISC ChangeLog 83676 SHA256 64c91ba150f957fb46c3cd46ac505868868514849aaaf6019fcf8c4b75560f44 SHA512 10f8a3006076dee6b8e645b3b4893e69e6114b60a40eb4ca4ce4aa7bafb5ab576349423361394e16fa7c1ca35cff8c9356f8a174507c64670aca53e3a4259af9 WHIRLPOOL 07bc14543b68f982970fb5c8f4089725450c775b827cbc3509a3ce2e176c0e16980b34edcb61c4ac26c2cba243a7dc63c0cbd0f40e7429df50da030eb8fa3b53
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 622 SHA256 0cc15c6cfce29d9372d650e883075630c844e262bb354a64c96d7e51580d25c9 SHA512 957d3b569ce2259d250681d91edf31d7dcea412d84c79017413866691d3b6fe27076f7d0d7c14f41421254438064d15c90d84940a3c6aa9c307c4db4277eadd1 WHIRLPOOL d621daeca803c0aa06b7abff6207a16cb9122c7ae6f7b02b57be88dd551ef4410fd20d592ea8ee7062bbef54ce09079dacd51e514febdebb16da24d8fb55f823
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlJGUxgACgkQuUQtlDBCeQLwXQCeMjyPbPBZlaMwrWR9YWs+O1dJ
-sJEAnjJRc5pqI9NB3QuAZpvckobTKfIs
-=XSn6
+iF4EAREIAAYFAlJHEMMACgkQC77qH+pIQ6StyQD8C8zJf6s9K4qQnbEOSucx5Gvv
+hap0RU3VirFXj+j3MsUA/2gQ1iVIa0FWWyXOoZZB7qOWZBB/FGen3SbEBMq3NKVF
+=7Gk1
 -----END PGP SIGNATURE-----
