@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-31.0.1650.0.ebuild,v 1.1 2013/09/28 03:54:54 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-31.0.1650.0.ebuild,v 1.2 2013/09/28 17:24:16 floppym Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_6,2_7} )
@@ -130,7 +130,6 @@ src_prepare() {
 
 	epatch "${FILESDIR}/${PN}-chromedriver-r0.patch"
 	epatch "${FILESDIR}/${PN}-gpsd-r0.patch"
-	epatch "${FILESDIR}/${PN}-system-icu-r0.patch"
 	epatch "${FILESDIR}/${PN}-system-jinja-r0.patch"
 
 	epatch_user
