@@ -1,6 +1,9 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.951 2013/09/28 03:54:54 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.952 2013/09/28 17:24:16 floppym Exp $
+
+  28 Sep 2013; Mike Gilbert <floppym@gentoo.org> chromium-31.0.1650.0.ebuild:
+  Drop failing patch, bug 486290 by Albert W. Hopkins.
 
 *chromium-31.0.1650.0 (28 Sep 2013)
 
