@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/dracut
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.130 2013/09/25 21:31:38 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.131 2013/09/28 17:17:51 aidecoe Exp $
+
+  28 Sep 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-033-r1.ebuild:
+  Removed dead 'optimization' flag from IUSE.
 
 *dracut-033-r1 (25 Sep 2013)
 
